Correcciones de ortografía

--- a/output/latex/presentacion.tex
+++ b/output/latex/presentacion.tex
@@ -81,7 +81,7 @@
 \logo{\includegraphics[scale=0.0875]{logo-uc}}
 \author{Grupo A - Estadística}		% Autor
 \date{1 de Diciembre de 2020}		% Fecha
-\institute[PUC]{
+\institute[EYP2307 - Análisis de Regresión]{
 	\inst{}
 		Pontificia Universidad Católica de Chile \\
 		Facultad de Matemáticas \\
@@ -135,7 +135,7 @@
 
 \begin{frame}{Limpieza de la base de datos}
 	\begin{itemize}
-		\item Como se tenian 169 variables en total, se decidió limpiar la base de datos.
+		\item Como se tenían 169 variables en total, se decidió limpiar la base de datos.
 		\pause
 		\item Al hacer la limpieza nos quedamos solo con 34 variables.
 	\end{itemize}
@@ -171,7 +171,7 @@
 
 \begin{frame}{Objetivo del Avance 2}
 	\begin{itemize}
-		\item Predecir la temperatura crítica de los superconductores en base a nuestra variable respuesta, utilizando modelos de regresión lineal multiple para mejorar los resultados obtenidos en el Avance 1.
+		\item Predecir la temperatura crítica de los superconductores en base a nuestra variable respuesta, utilizando modelos de regresión lineal múltiple para mejorar los resultados obtenidos en el Avance 1.
 	\end{itemize}
 \end{frame}
 
